base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  labels:
    app: www
spec:
  ingressClassName: nginx
  rules:
  - host: zanartcc.org
    http:
      paths:
      - backend:
          service:
            name: www-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - zanartcc.org
    secretName: www-vzanartcc-net-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(.*)$ https://zanartcc.org/$1 permanent;
  name: www-ingress-old
  labels:
    app: api
spec:
  ingressClassName: nginx
  rules:
  - host: www.zanartcc.org
    http:
      paths:
      - backend:
          service:
            name: www-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: www.vzanartcc.net
    http:
      paths:
      - backend:
          service:
            name: www-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: vzanartcc.net
    http:
      paths:
      - backend:
          service:
            name: www-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.zanartcc.org
    - www.vzanartcc.net
    - vzanartcc.net
    secretName: www-vzanartcc-net-tls
